<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nova_persona" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="127dp"
            android:layout_height="134dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            app:srcCompat="@mipmap/girl1"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/nom" />

        <EditText
            android:id="@+id/txtNomPersona"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ex_maria_joan_etc"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/cognom" />

        <EditText
            android:id="@+id/txtCognomPersona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ex_suarez_benitez"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/correu_electronic" />

        <EditText
            android:id="@+id/txtMailPersona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ex_natalia_gmail_com"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/tel_fon" />

        <EditText
            android:id="@+id/txtPhonePersona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ex_615464971"
            android:inputType="phone" />

        <Button
            android:id="@+id/buttonAfegirPersona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/afegir" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>