<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layNewPrestec"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:text="@string/persona" />

            <Spinner
                android:id="@+id/spinnerPersones"
                android:layout_width="match_parent"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:text="@string/objecte" />

            <Spinner
                android:id="@+id/spinnerObjectes"
                android:layout_width="match_parent"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_height="51dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:text="@string/data_prestec" />

            <EditText
                android:id="@+id/datepickerPrestec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:ems="10"
                android:focusable="false"
                android:inputType="date" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:text="@string/nota_addicional" />

            <EditText
                android:id="@+id/txtNotaPrestec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonAfegirPrestec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/afegir" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>