<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="198dp"
            android:layout_margin="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgPersona"
                    android:layout_width="100dp"
                    android:layout_height="132dp"
                    android:layout_marginRight="16dp"
                    android:src="@mipmap/girl1" />

                <LinearLayout
                    android:layout_width="188dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nom" />

                    <TextView
                        android:id="@+id/txtPersonaNom"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Natalia Suarez Benitez" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/correu_electronic" />

                    <TextView
                        android:id="@+id/txtPersonaEmail"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="email"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="natalia@gmail.com" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tel_fon" />

                    <TextView
                        android:id="@+id/txtPersonaTelefon"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:text="615 46 49 71" />

                </LinearLayout>

            </TableRow>
        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>