<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                tools:ignore="MissingConstraints">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/TextAppearance.MaterialComponents.Headline4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/prestecs"
                        android:textSize="18sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <HorizontalScrollView
                                android:id="@+id/horizontalScrollViewPrestec"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/recycleViewPrestec"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:scrollbars="horizontal" />

                            </HorizontalScrollView>
                        </LinearLayout>
                    </RelativeLayout>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/TextAppearance.MaterialComponents.Headline4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/objectes"
                        android:textSize="18sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <HorizontalScrollView
                                android:id="@+id/horizontalScrollViewObject"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/recycleViewObject"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:scrollbars="horizontal" />

                            </HorizontalScrollView>
                        </LinearLayout>
                    </RelativeLayout>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/TextAppearance.MaterialComponents.Headline4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textview"
                        android:textSize="18sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <HorizontalScrollView
                                android:id="@+id/horizontalScrollViewPersones"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/recycleViewPersones"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:scrollbars="horizontal" />

                            </HorizontalScrollView>
                        </LinearLayout>
                    </RelativeLayout>
                </TableRow>

            </TableLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>